# machine_capacity_planner

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  INSTALLATION.md  SOP.md
machine_capacity_planner/: hooks.py  modules.txt  permissions.py  setup.py
machine_capacity_planner/api/: capacity.py  mrp.py
machine_capacity_planner/doctype/escalation_log/: escalation_log.json
machine_capacity_planner/doctype/machine_capacity_override/: machine_capacity_override.json
machine_capacity_planner/doctype/machine_selection_log/: __init__.py  machine_selection_log.py
machine_capacity_planner/doctype/machine_selection_settings/: machine_selection_settings.json  machine_selection_settings.py
machine_capacity_planner/doctype/material_readiness_override/: material_readiness_override.json
machine_capacity_planner/events/: job_card.py  sales_order.py  work_centre.py  work_order.py
machine_capacity_planner/fixtures/: custom_fields.json
machine_capacity_planner/public/: build.json
machine_capacity_planner/public/js/: dummy.js
machine_capacity_planner/scripts/: setup_demo_data.py
machine_capacity_planner/tasks/: escalation.py  mrp_sync.py  notifications.py  rebalancer.py
machine_capacity_planner/tests/: test_machine_selector.py
machine_capacity_planner/utils/: create_demo_data.py  cycle_time.py  logger.py  machine_selector.py  manpower_capacity.py  mrp_checker.py
scripts/: setup_demo_data.py
(+36 files in other folders)
